<resources>
    <string name="app_name">ToDo App</string>
    <string name="to_do_list">To Do List</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="select_time">Select Time</string>
    <string name="add_task">Add task</string>
    <string name="edit_task">Edit task</string>
    <string name="select_date">Select date\n</string>
    <string name="save">Save</string>
    <string name="no_selected_date">No Selected date</string>
    <string name="done">Done !</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="night">Night</string>
    <string name="arabic">Arabic</string>
</resources>