<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnPrimary"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/input_field_box"
        android:hint="@string/title"
        android:inputType="text"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/input_field_box"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColorHint="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_select_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/select_time"
            android:textAppearance="@style/body" />

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/no_selected_date"
            android:textColor="@color/gray100"
            android:textSize="16sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_task"
        android:textAppearance="@style/title"
        android:background="@drawable/task_check_btn"
    />

</LinearLayout>
